# trident

./: Cargo.toml  README.md  build.rs  cbindgen.toml
doc/: search-index.js  source-files.js
doc/lib/: all.html  fn.add.html  fn.test_func_for_bindgen.html  index.html  sidebar-items.js
doc/src/lib/: lib.rs.html  rules.rs.html  threshold_examiner.rs.html
src/: lib.rs  rules.rs  threshold_examiner.rs
