[package]
name = "trident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trident"
crate-type = ["staticlib"]

[dependencies]

[build-dependencies]
cbindgen = "0.24"

[dev-dependencies]
mockall = "0.11.3"
